--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <html lang="en">
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="styles.css">
-      <title></title>
+      <link rel="stylesheet" href="style.css">
+      <title>Survey Form</title>
     </head>
     <body>
       <h1 id="title">Shivam Dixit Digital Survey form</h1>
